--- a/src/pages/views/auth/login.ejs
+++ b/src/pages/views/auth/login.ejs
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Pezcoma</title>
+  <link rel="icon" type="image/svg+xml" href="" />
   <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
