cambios y ejercicios de plantillas

--- a/src/pages/views/layouts/header.ejs
+++ b/src/pages/views/layouts/header.ejs
@@ -18,8 +18,8 @@
           </li>
   
           <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#">
-              Encuestas</a>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="/post">
+              Publicaciones</a>
           </li>
   
           <li>
