--- a/src/pages/views/user/index.ejs
+++ b/src/pages/views/user/index.ejs
@@ -1,58 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body>
   <header class="bg-white"><%- include('../layouts/header'); %></header>
-
   <main class="container mx-auto px-6">
-    <div class="overflow-x-auto">
-      <table class="min-w-full divide-y-2 divide-gray-200 bg-white text-sm">
-        <thead class="ltr:text-left rtl:text-right">
-          <tr>
-            <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">
-              Nombre
-            </th>
-            <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">
-              Email
-            </th>
-            <th class="w-4"></th>
-            <th class="w-4"></th>
-            <th class="w-4"></th>
+   <table class="min-w-full divide-y border border-gray-200 bg-white text-sm">
+      <thead class="ltr:text-left rtl:text-right">
+        <tr>
+          <th class="px-4 py-2 font-medium text-gray-900">
+            Foto
+          </th>
+          <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">
+            Nombre
+          </th>
+          <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">
+            Email
+          </th>
+          <th class="w-4"></th>
+          <th class="w-4"></th>
+        </tr>
+      </thead>
+      <tbody class="divide-y divide-gray-200">
+        <% for (const user of users) { %>
+          <tr class="bg-gray-100"> <td class="whitespace-nowrap px-4 py-2">
+              <span class="w-8 h-8 rounded-full bg-gray-300 flex justify-center items-center mr-4">
+                <span class="text-xl font-bold text-white">JU</span>  
+              </span>
+            </td>
+            <td class="whitespace-nowrap px-4 py-2 font-medium text-gray-800">
+              <%= user.name %>
+            </td>
+            <td class="whitespace-nowrap px-4 py-2 text-gray-700">
+              <%= user.email %>
+            </td>
+            <td class="whitespace-nowrap w-4">
+              <a href="user/edit/<%= user._id %>"
+                class="w-20 inline-block rounded bg-blue-600 px-4 py-2 text-xs font-medium text-white text-center hover:bg-indigo-700">
+                Editar
+              </a>
+            </td>
+            <td class="whitespace-nowrap w-4">
+              <button type="button" href="user/delete/<%= user._id %>" onclick="deleteUser('<%= user._id %>')"
+                class="w-20 inline-block rounded bg-blue-600 px-4 py-2 text-xs font-medium text-white text-center hover:bg-indigo-700">
+                Eliminar
+              </button>
+            </td>
           </tr>
-        </thead>
-        <tbody class="divide-y divide-gray-200">
-          <% for (const user of users) { %>
-            <tr>
-              <td class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">
-                <%= user.name %>
-              </td>
-              <td class="whitespace-nowrap px-4 py-2 text-gray-700">
-                <%= user.email %>
-              </td>
-              <td class="whitespace-nowrap w-4">
-                <a href="user/edit/<%= user._id %>"
-                  class="w-20 inline-block rounded bg-blue-600 px-4 py-2 text-xs font-medium text-white text-center hover:bg-indigo-700">
-                  Editar
-                </a>
-              </td>
-              <td class="whitespace-nowrap w-4">
-                <button type="button" href="user/delete/<%= user._id %>" onclick="deleteUser('<%= user._id %>')"
-                  class="w-20 inline-block rounded bg-blue-600 px-4 py-2 text-xs font-medium text-white text-center hover:bg-indigo-700">
-                  Eliminar
-                </button>
-              </td>
-            </tr>
-            <% } %>
-        </tbody>
-      </table>
-    </div>
+          <% } %>
+      </tbody>
+    </table>
   </main>
 
   <footer><%- include('../layouts/footer'); %></footer>
